gccida/g1/emit_group_load
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_group_load/src/expr.c:2446:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // [rsp+3Ch] [rbp-34h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_group_load/src/expr.c:2491:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v19 = ( __int64)v12[1]; 
                ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_group_load/src/expr.c:2515:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v28.rtwint = ( __int64)v12->fld[bytepos != 0]; 
                       ^~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_group_load/src/expr.c:2529:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)v12 + 2), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_group_load/src/expr.c:2573:22: error: use of undeclared identifier 'machine_mode'
v12 = gen_reg_rtx( ( machine_mode)v11); 
                     ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_group_load/src/obj/expr.o] Error 1
